[package]
name = "auto-launch"
version = "0.5.0"
edition = "2021"
authors = ["zzzgydi"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zzzgydi/auto-launch.git"
keywords = ["launch", "auto-launch", "startup", "login", "login-items"]
description = "Auto launch any application or executable at startup. Supports Windows, macOS, and Linux."
exclude = ["/test-exe"]

[dependencies]
thiserror = "2"

[target."cfg(not(target_os = \"windows\"))".dependencies]
dirs = "6"

[target.'cfg(windows)'.dependencies]
winreg = { version = "0.55.0" }
windows = { version = "0.61", features = [
    "Win32_System_Com",
    "Win32_Storage_Packaging_Appx",
    "Win32_Foundation",
    "Foundation_Collections",
    "ApplicationModel_Activation",
    "ApplicationModel",
] }
windows-core = { version = "0.61" }
